# vantage

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: analysis.rs  config.rs  display.rs  lib.rs  local_api.rs  lockfile.rs  main.rs  models.rs
src-tauri/: Cargo.toml  build_err.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
ui/: App.tsx  index.css  main.tsx
ui/components/: Icons.tsx  Titlebar.tsx
ui/pages/: Home.tsx  MatchView.tsx  Settings.tsx
ui/utils/: icons.ts
