[package]
name = "vantage"
version = "0.1.0"
edition = "2021"
description = "Valorant overlay, live match data & stats tracker"
license = "MIT"

[[bin]]
name = "vantage"
path = "src/main.rs"

[lib]
name = "vantage"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
anyhow = "1"
base64 = "0.21"
regex = "1"
futures = "0.3"
toml = "0.8"
